# Hogans-Alley

./: .env.example  .gitignore  404.html  DEPLOYMENT_CHECKLIST.md  HogansAlley_GoogleAds_API_Design_Document.docx  HogansAlley_GoogleAds_API_Design_Document.md  HogansAlley_GoogleAds_API_Design_Document.rtf  INVENTORY_AND_WAITLIST_SETUP.md  README.md  SITEMAP.md  add-lazy-loading.js  animations.js  cancel.html  care.html  contact.html  convert-to-netlify-images.js  faq.html  generate-optimized.cjs  index.html  kids.html  lookbook.html  netlify.toml  optimize-images.md  optimize-srcset.cjs  package-lock.json  package.json  product-page-libation.html  robots.txt  shop.html  sitemap.xml  sizing.html  story.html  styles.css  success.html  update-html-optimized.cjs  ~$gansAlley_GoogleAds_API_Design_Document.rtf
.claude/: settings.local.json
Site pages/: hogans_alley_collection_libation.html  hogans_alley_collection_money.html  hogans_alley_collection_sanitation.html  hogans_alley_collection_transport.html  hogans_alley_contact.html  hogans_alley_faq.html  hogans_alley_homepage_v2_5.html  hogans_alley_lookbook.html  hogans_alley_shop_v3.html  hogans_alley_sizing_guide.html  hogans_alley_story_2.html
collections/: libation.html  money.html  sanitation.html  transport.html
css/: cart-drawer.css  components.css  (+1 more)
google-ads-mcp/: .gitignore  .mcp.json  SETUP.md  google-ads.yaml.example  pyproject.toml
google-ads-mcp/hogans_ads_mcp/: __init__.py  auth.py  config.py  server.py
google-ads-mcp/hogans_ads_mcp/tools/: __init__.py  ads.py  campaigns.py  keywords.py  reporting.py
(+74 files in other folders)
